Placeholder api specs for all routes
