# internal/router/feed.go
@@ -29,6 +29,19 @@ func (fr *FeedRepo) ConfigureRoutes(rtr fiber.Router) {
 	rtr.Get("/explore", fr.getExplore)
 }
 
+// getChrono handles the request to get the chronological feed for a user.
+// @Summary Get chronological feed
+// @Description Get posts in a chronological order
+// @Tags Feed
+// @Accept  json
+// @Produce  json
+// @Param cursor query string false "Cursor for pagination"
+// @Success 200
+// @Failure 400
+// @Failure 401
+// @Failure 500
+// @Security ApiKeyAuth
+// @Router /feed/chrono [get]
 func (fr *FeedRepo) getChrono(c *fiber.Ctx) error {
 
 	// Get the cursor from the query string
@@ -48,11 +61,32 @@ func (fr *FeedRepo) getChrono(c *fiber.Ctx) error {
 	return fr.Srv.Feed.GetChrono(c, c.Locals("requestorId").(*uuid.UUID), cursor)
 }
 
+// getAlgo handles the request to get the algorithm based feed for a user.
+// @Summary Get algorithm-based feed
+// @Description Get posts based on a particular algorithm (Not Implemented)
+// @Tags Feed
+// @Accept  json
+// @Produce  json
+// @Success 200
+// @Failure 400
+// @Failure 500
+// @Security ApiKeyAuth
+// @Router /feed/algo [get]
 func (fr *FeedRepo) getAlgo(c *fiber.Ctx) error {
 	return nil
 }
 
-// getExploreFeed returns a list of the latest posts from all users
+// getExplore handles the request to get the explore feed for a user.
+// @Summary Get explore feed
+// @Description Get posts for the explore section (Not Implemented)
+// @Tags Feed
+// @Accept  json
+// @Produce  json
+// @Success 200
+// @Failure 400
+// @Failure 500
+// @Security ApiKeyAuth
+// @Router /feed/explore [get]
 func (fr *FeedRepo) getExplore(c *fiber.Ctx) error {
 	return nil
 }
